Mengubah isi pada bagian About

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 	<div class="profile" id="profile">
 		<img src="fix.png">
 		<p>BAJA PAWIRA BANGUN S.T.</p>
-		<p class="job">Web Developer | UI Designer | Illustrator</p>
+		<p class="job">Web Developer | UI Designer | Graphic Designer</p>
 	</div>
 	<div class="secborder"></div>
 	<!-- Akhir Profile -->
@@ -303,13 +303,13 @@
 		<hr>
 		<div class="main">
 			<p>
-				Seorang lulusan S1 Teknik Informatika dari <a href="https://www.uisu.ac.id/" target="_blank">Universitas Islam Sumatera Utara</a> tahun 2018-2022. Lulus dengan IPK 3.66 <i>(Excellent)</i>. Judul Skripsi yang diangkat berkaitan dengan <i>Artificial Intelligence</i> yaitu membahas <i>Machine Learning</i>, dan mendapatkan hasil yang memuaskan. Mulai mendalami Web Development khususnya front-end web development semenjak 2 tahun akhir masa perkuliahan dan terus mendalaminya sampai sekarang. Memiliki pengalaman ikut terlibat dalam pengembangan aplikasi web based sewaktu dimasa perkuliahan. Beberapa contoh project yang pernah dikerjakan berkaitan dengan E-Commerce, website development, web design, brosur design, portfolio, dan Company Profile.
+				Seorang lulusan S1 Teknik Informatika dari <a href="https://www.uisu.ac.id/" target="_blank">Universitas Islam Sumatera Utara</a> tahun 2018-2022. Lulus dengan IPK 3.66 <i>(Excellent)</i>. Judul Skripsi yang diangkat berkaitan dengan <i>Artificial Intelligence</i> yaitu membahas <i>Machine Learning</i>, dan mendapatkan hasil yang memuaskan. Mulai mendalami Web Development khususnya front-end web development semenjak 2 tahun akhir masa perkuliahan dan terus mendalaminya sampai sekarang. Memiliki pengalaman ikut terlibat dalam pengembangan aplikasi web based sewaktu dimasa perkuliahan. Beberapa contoh project yang pernah dikerjakan berkaitan dengan E-Commerce, website development, web design, brosur design, portfolio, dan Company Profile. Untuk Bahasa pemrograman yang dikuasai yaitu HTML, CSS, Javascript, PHP dan beberapa frameworknya.
 			</p>
 		</div>
 
 		<div class="sidebar">
 			<p>
-				Memiliki sifat disiplin, teliti dan bertanggungjawab. Hobi berolahraga, menggambar dan membaca. Senang mengikuti perkembangan teknologi dan selalu memperbarui pengetahuan yang berkaitan dengan web development. Dapat bekerja secara mandiri maupun dalam tim serta terbiasa bekerja dengan deadline. Memiliki imajinasi yang tinggi, terbukti sangat relevan dan membantu dalam pengembangan visualisasi UI. Untuk Bahasa pemrograman yang dikuasai yaitu HTML, CSS, Javascript, PHP dan beberapa frameworknya. sedangkan untuk tools lain yang digunakan untuk membantu dalam pengembangan design berupa Photoshop dan figma.
+				Seorang yang disiplin, teliti dan bertanggungjawab. Hobi berolahraga, menggambar dan membaca. Memiliki ketertarikan yang tinggi akan desiain dan visualisasi. Sekarang ini mulai mengembangkan skill yang dimiliki, tidak hanya sebagi web development namun juga sudah mulai merambat ke UI dan Graphic Design. Senang mengikuti perkembangan teknologi dan selalu up-to-date dengan informasi terbaru. Dapat bekerja secara mandiri maupun dalam tim serta terbiasa bekerja dengan deadline. Memiliki imajinasi yang tinggi, terbukti sangat relevan dan membantu dalam pengembangan visualisasi desain. Aktif disalah satu platform media sosial sembari meningkatkan dan berbagi pengalaman yang dimiliki. Untuk tools yang dipakai dalam melakukam designing berupa Photoshop dan Figma.
 			</p>
 		</div>
 		
