Menambahkan file frame.png dan mengubah background pada bagian profile

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 		.profile {
 			height: 350px;
 			width: 100%;
-			background-color: #dddbdb;
+			/*background-color: #dddbdb;*/
+			background-image: url(frame.png);
 			position: absolute;
 			top: 0;
 			left: 0;
