--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
 	<div class="portfolio" id="portfolio">
 		<p>Portfolio</p>
 		<hr>
+		<p class="lorem"> <a href="portfolio.html" target="blank">Show More</a> </p><br>
 		<div class="gambar">
 			<img src="d.png">
 			<img src="f.png">
